--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "api-project",
+  "name": "books-api",
   "version": "1.0.0",
-  "description": "Created an API for personal project",
-  "main": "index.js",
+  "description": "RESTful API for books and authors",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "start": "nodemon app.js"
   },
-  "keywords": [],
-  "author": "stryder bateman <sbateman716@west-mec.org>",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^1.7.7",
-    "body-parser": "^1.20.3",
-    "ejs": "^3.1.10",
-    "express": "^4.21.0",
-    "parse": "^5.3.0",
-    "path": "^0.12.7",
-    "vite": "^5.4.8"
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^2.11.0"
   }
 }
